[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
base64 = "0.22.1"
ed25519-dalek = {version = "3.0.0-pre.0", features = ["pkcs8"]}
nanoid = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
